--- a/clients/pms/package.json
+++ b/clients/pms/package.json
@@ -15,12 +15,14 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
     "@electron-forge/maker-deb": "^7.2.0",
+    "@electron-forge/maker-dmg": "^7.2.0",
     "@electron-forge/maker-rpm": "^7.2.0",
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "@electron-forge/publisher-github": "^7.2.0",
-    "electron": "^28.0.0"
+    "electron": "^28.0.0",
+    "express": "^4.18.2"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
