--- a/services/static_trading_engine/Dockerfile
+++ b/services/static_trading_engine/Dockerfile
@@ -1,4 +1,10 @@
-FROM trisagent
-COPY . /app
+FROM python:3.10.10
+ENV PYTHONPATH="."
+RUN mkdir /app
+RUN mkdir /app/build
+COPY lib/trisigma /app/build/trisigma
+WORKDIR /app/build/trisigma
+RUN pip install .
+COPY services/static_trading_engine /app
 WORKDIR /app
 CMD ["python3", "-u", "main.py"]
